--- a/Events App/View/Base.lproj/Main.storyboard
+++ b/Events App/View/Base.lproj/Main.storyboard
@@ -51,7 +51,6 @@
                             <constraint firstAttribute="bottom" secondItem="Lg4-Mg-aLJ" secondAttribute="bottom" id="4Ef-a5-0MG"/>
                             <constraint firstItem="I3R-di-Gzt" firstAttribute="top" secondItem="PHV-4c-BJo" secondAttribute="bottom" constant="8" id="78g-oA-Xa5"/>
                             <constraint firstItem="9nW-ut-Cdl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="AYw-hG-PYo"/>
-                            <constraint firstItem="Lg4-Mg-aLJ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AtT-Ci-KjL"/>
                             <constraint firstItem="Lg4-Mg-aLJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Gn3-1j-dHo"/>
                             <constraint firstItem="9nW-ut-Cdl" firstAttribute="top" secondItem="PHV-4c-BJo" secondAttribute="bottom" constant="8" id="LWI-e9-imB"/>
                             <constraint firstItem="I3R-di-Gzt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="9nW-ut-Cdl" secondAttribute="trailing" constant="8" symbolic="YES" id="QGT-xj-k8f"/>
@@ -59,6 +58,7 @@
                             <constraint firstItem="PHV-4c-BJo" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="VNI-4x-Ogv"/>
                             <constraint firstItem="PHV-4c-BJo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ZeD-Uy-TO7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="I3R-di-Gzt" secondAttribute="trailing" constant="20" id="kE1-5U-0qv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Lg4-Mg-aLJ" secondAttribute="trailing" id="nkg-RK-oIB"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Events App" id="zne-EZ-7pL"/>
@@ -98,7 +98,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="796"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="Moz-84-aH8">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="Moz-84-aH8">
                                                     <rect key="frame" x="0.0" y="-20" width="414" height="380"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
@@ -309,7 +309,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wZL-tu-Yj3">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="792"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="utz-tQ-tpI">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="utz-tQ-tpI">
                                                 <rect key="frame" x="0.0" y="8" width="414" height="360"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="360" id="gSU-1p-KwM"/>
@@ -559,10 +559,10 @@
             <color red="0.96078431372549022" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="blue">
-            <color red="0.21568627450980393" green="0.4392156862745098" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.21600000560283661" green="0.43900001049041748" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="red">
-            <color red="0.93333333333333335" green="0.28627450980392155" blue="0.3411764705882353" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.93300002813339233" green="0.28600001335144043" blue="0.34099999070167542" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
