--- a/Events App/View/HomeTableViewCell.xib
+++ b/Events App/View/HomeTableViewCell.xib
@@ -27,38 +27,35 @@
                                     <constraint firstAttribute="width" constant="140" id="3Fq-3m-Krb"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Cc-1x-Kgo">
-                                <rect key="frame" x="170" y="30" width="52" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Software System Engineer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XcE-vg-1Jp">
-                                <rect key="frame" x="170" y="58.5" width="235" height="21.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Software System Engineer" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XcE-vg-1Jp">
+                                <rect key="frame" x="170" y="20" width="215" height="53"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="QIV-Sy-skI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <color key="textColor" name="blue"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Category:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2de-T5-BYT">
-                                <rect key="frame" x="170" y="132.5" width="79" height="20.5"/>
+                                <rect key="frame" x="170" y="125.5" width="79" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hackathon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y87-Ob-dgr">
-                                <rect key="frame" x="257" y="133.5" width="148" height="21.5"/>
+                                <rect key="frame" x="257" y="126.5" width="148" height="21.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Experience:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pig-lz-NjN">
-                                <rect key="frame" x="170" y="96" width="94" height="20.5"/>
+                                <rect key="frame" x="170" y="89" width="94" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 - 2 Years" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAq-oj-FnW">
-                                <rect key="frame" x="272" y="96" width="133" height="21.5"/>
+                                <rect key="frame" x="272" y="89" width="133" height="21.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -102,13 +99,12 @@
                             <constraint firstAttribute="trailingMargin" secondItem="FQh-CZ-DjH" secondAttribute="trailing" constant="10" id="6oD-ci-gaY"/>
                             <constraint firstItem="xae-RS-OIY" firstAttribute="top" secondItem="tQQ-S4-378" secondAttribute="top" constant="10" id="7b0-49-y6T"/>
                             <constraint firstItem="pig-lz-NjN" firstAttribute="leading" secondItem="xae-RS-OIY" secondAttribute="trailing" constant="20" id="CGR-wk-mWH"/>
-                            <constraint firstItem="XcE-vg-1Jp" firstAttribute="top" secondItem="3Cc-1x-Kgo" secondAttribute="bottom" constant="8" id="DAb-3B-lgW"/>
                             <constraint firstAttribute="trailing" secondItem="Y87-Ob-dgr" secondAttribute="trailing" id="E98-mJ-uy5"/>
                             <constraint firstItem="FQh-CZ-DjH" firstAttribute="top" secondItem="xae-RS-OIY" secondAttribute="bottom" constant="8" id="GKp-BA-nMu"/>
-                            <constraint firstAttribute="trailing" secondItem="XcE-vg-1Jp" secondAttribute="trailing" id="J1v-io-ujN"/>
+                            <constraint firstItem="XcE-vg-1Jp" firstAttribute="top" secondItem="tQQ-S4-378" secondAttribute="top" constant="20" id="HCs-Bn-fkW"/>
+                            <constraint firstAttribute="trailing" secondItem="XcE-vg-1Jp" secondAttribute="trailing" constant="20" id="J1v-io-ujN"/>
                             <constraint firstItem="2de-T5-BYT" firstAttribute="top" secondItem="pig-lz-NjN" secondAttribute="bottom" constant="16" id="K9T-Wq-8Uc"/>
                             <constraint firstItem="XcE-vg-1Jp" firstAttribute="leading" secondItem="xae-RS-OIY" secondAttribute="trailing" constant="20" id="MiF-Gf-iE8"/>
-                            <constraint firstItem="3Cc-1x-Kgo" firstAttribute="leading" secondItem="xae-RS-OIY" secondAttribute="trailing" constant="20" id="Q0O-pq-eih"/>
                             <constraint firstItem="pig-lz-NjN" firstAttribute="top" secondItem="XcE-vg-1Jp" secondAttribute="bottom" constant="16" id="Xab-91-dSF"/>
                             <constraint firstItem="tAq-oj-FnW" firstAttribute="top" secondItem="XcE-vg-1Jp" secondAttribute="bottom" constant="16" id="YIc-uj-hE6"/>
                             <constraint firstItem="xae-RS-OIY" firstAttribute="leading" secondItem="tQQ-S4-378" secondAttribute="leading" constant="10" id="aS7-jh-n3D"/>
@@ -116,7 +112,6 @@
                             <constraint firstItem="Y87-Ob-dgr" firstAttribute="leading" secondItem="2de-T5-BYT" secondAttribute="trailing" constant="8" symbolic="YES" id="nGu-a1-K7Q"/>
                             <constraint firstAttribute="trailing" secondItem="tAq-oj-FnW" secondAttribute="trailing" id="pAm-vD-RCQ"/>
                             <constraint firstAttribute="bottom" secondItem="FQh-CZ-DjH" secondAttribute="bottom" constant="20" id="spu-RA-FTt"/>
-                            <constraint firstItem="3Cc-1x-Kgo" firstAttribute="top" secondItem="tQQ-S4-378" secondAttribute="top" constant="30" id="wzc-T7-Arx"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -142,6 +137,9 @@
     </objects>
     <resources>
         <image name="heart" catalog="system" width="128" height="109"/>
+        <namedColor name="blue">
+            <color red="0.21600000560283661" green="0.43900001049041748" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="red">
             <color red="0.93300002813339233" green="0.28600001335144043" blue="0.34099999070167542" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
