--- a/Events App/View/HomeTableViewCell.xib
+++ b/Events App/View/HomeTableViewCell.xib
@@ -80,14 +80,18 @@
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="oqK-rT-3zE">
-                                        <rect key="frame" x="329" y="18.5" width="40" height="37.5"/>
-                                        <color key="tintColor" name="red"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wes-2W-yhR">
+                                        <rect key="frame" x="329" y="21" width="40" height="32.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="VfF-X6-7f5"/>
-                                            <constraint firstAttribute="height" constant="40" id="z1P-1p-T6m"/>
+                                            <constraint firstAttribute="width" constant="40" id="vhl-LS-k4e"/>
+                                            <constraint firstAttribute="height" constant="35" id="vyN-FO-cCq"/>
                                         </constraints>
-                                    </imageView>
+                                        <color key="tintColor" name="red"/>
+                                        <state key="normal" backgroundImage="heart" catalog="system"/>
+                                        <connections>
+                                            <action selector="favButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="uht-qp-4R8"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -130,7 +134,7 @@
                 <outlet property="eventImageView" destination="xae-RS-OIY" id="MZy-KZ-V4f"/>
                 <outlet property="eventTitle" destination="XcE-vg-1Jp" id="zBk-wz-nIA"/>
                 <outlet property="experienceLabel" destination="tAq-oj-FnW" id="tem-aO-heF"/>
-                <outlet property="favouriteButton" destination="oqK-rT-3zE" id="xsR-WE-FGj"/>
+                <outlet property="favouriteButton" destination="wes-2W-yhR" id="98d-IB-FPa"/>
             </connections>
             <point key="canvasLocation" x="35.507246376811594" y="155.35714285714286"/>
         </tableViewCell>
